[tool.poetry]
name = "rl-gym"
version = "0.1.0"
description = ""
authors = ["pisce <pis.ceyatta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"
matplotlib = "^3.3.2"
gym = "^0.17.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
